<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_venda">


    <fragment
        android:id="@+id/nav_venda"
        android:name="com.filomenadeveloper.laboro_new_version.ui.venda.VendaFragment"
        android:label="@string/menu_venda"
        tools:layout="@layout/fragment_venda" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.filomenadeveloper.laboro_new_version.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_catalogo"
        android:name="com.filomenadeveloper.laboro_new_version.ui.catalogoOnlain.CatalogoOnlainFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_slideshow" />
</navigation>